--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,19 +1,13 @@
 {
   "dependencies": {
-    "com.unity.2d.sprite": "1.0.0",
-    "com.unity.2d.tilemap": "1.0.0",
-    "com.unity.ai.navigation": "2.0.5",
-    "com.unity.analytics": "3.8.1",
-    "com.unity.collab-proxy": "2.5.2",
-    "com.unity.ide.rider": "3.0.34",
-    "com.unity.ide.visualstudio": "2.0.22",
-    "com.unity.multiplayer.center": "1.0.0",
-    "com.unity.purchasing": "4.12.2",
-    "com.unity.test-framework": "1.4.5",
-    "com.unity.timeline": "1.8.7",
-    "com.unity.ugui": "2.0.0",
-    "com.unity.xr.legacyinputhelpers": "2.1.11",
-    "com.unity.modules.accessibility": "1.0.0",
+    "com.unity.collab-proxy": "1.14.18",
+    "com.unity.ide.rider": "1.2.1",
+    "com.unity.ide.visualstudio": "2.0.15",
+    "com.unity.ide.vscode": "1.2.5",
+    "com.unity.test-framework": "1.1.31",
+    "com.unity.textmeshpro": "2.1.6",
+    "com.unity.timeline": "1.2.18",
+    "com.unity.ugui": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
